plugins {
    id 'java'
    id 'com.adarshr.test-logger' version '3.2.0'
}

group 'com.surrealdb'
version '0.2.0'

repositories {
    mavenCentral()
}

compileJava {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

dependencies {
    // Java-WebSocket
    implementation 'org.java-websocket:Java-WebSocket:1.5.3'

    // Gson
    implementation 'com.google.code.gson:gson:2.10'

    // Immutable Collections and utilities
    implementation("com.google.guava:guava:31.1-jre")

    // logging
    implementation 'org.slf4j:slf4j-api:1.7.36'
    testImplementation 'ch.qos.logback:logback-core:1.3.4'
    testImplementation 'ch.qos.logback:logback-classic:1.3.4'

    // lombok
    compileOnly 'org.projectlombok:lombok:1.18.24'
    annotationProcessor 'org.projectlombok:lombok:1.18.24'
    testCompileOnly 'org.projectlombok:lombok:1.18.24'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.24'

    // @NotNull & @Nullable
    implementation 'org.jetbrains:annotations:23.0.0'

    // junit
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.0'
}

test {
    useJUnitPlatform()
    environment('TEST_SURREAL_HOST', 'localhost')
    environment('TEST_SURREAL_PORT', 8000)
    environment('TEST_SURREAL_USERNAME', 'root')
    environment('TEST_SURREAL_PASSWORD', 'root')
    environment('TEST_SURREAL_NAMESPACE', 'test')
    environment('TEST_SURREAL_DATABASE', 'test')
}

task fatJar(type: Jar) {
    manifest {
        attributes 'Main-Class': 'com.surrealdb.driver.SyncSurrealDriver'
    }
    from {
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    with jar
}
